Correction : register and login areas overflowing

--- a/style/css/login.css
+++ b/style/css/login.css
@@ -2,9 +2,8 @@
     background-color: white;
 	position:absolute;
     left: 50%;
-    top: 40%;
+    top: 20%;
     margin-left: -150px; 
-    margin-top: -175px;
     opacity: 1;
     width: 300px;
     height: 350px;
