--- a/style/css/register.css
+++ b/style/css/register.css
@@ -2,9 +2,8 @@
     background-color: white;
 	position:absolute;
     left: 50%;
-    top: 40%;
+    top: 20%;
     margin-left: -225px; 
-    margin-top: -195px;
     opacity: 1;
     width: 450px;
     height: 390px;
